    whill actually be tried. (Closes: Bug#300937)

  * Satiate the POSIX sh monkeys, makenwdep.sh now uses printf for \t's,
    not echo -e. (Closes: Bug#294970)

  * Switch to using "/etc/network/run/ifstate" instead of
    "/etc/network/ifstate". Simplify all the complicated hackery dealing
    with that. Use myreadlink function instead of /lib/init/readlink.
    (Closes: Bug#302519)

 -- Anthony Towns <aj@azure.humbug.org.au>  Wed, 23 Mar 2005 04:53:53 +1000

ifupdown (0.6.4-4.12) unstable; urgency=low

  * Non-maintainer upload
  * Begin description synopsis with lower case letter
  * postinst:
    + Create run dir at the target of /etc/network/run if it is absent
      (Closes: #297898)

 -- Thomas Hood <jdthood@yahoo.co.uk>  Thu,  3 Mar 2005 19:05:05 +0100

ifupdown (0.6.4-4.11) unstable; urgency=low

  * Non-maintainer upload
  * postinst:
    + Do not make /etc/network/run a symlink to /dev/shm/network/
      if devfs is in use.  (Closes: #266479)
  * /etc/init.d/ifupdown:
    + Don't accept arguments to "start" method
    + Fix initscript output
  * ifup.8:
    + Correct typo (Closes: #287172)
  * interfaces.5:
    + Correct description of what happens when user commands fail
      (Closes: #286166)
    + Remove reference to VERBOSE which isn't implemented in this
      version  (Reported in #88946)
  * Add it.po thanks to Luca Monducci  (Closes: #284123)

 -- Thomas Hood <jdthood@yahoo.co.uk>  Sun, 12 Sep 2004 14:46:29 +0200

ifupdown (0.6.4-4.10) unstable; urgency=low

  * Non-maintainer upload. Fix critical bugs.
  * fix ifstate cleaning in init script. (Closes: #264134).
  * fix /etc/network/run creation in postinst (Closes: #265165).

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Tue, 17 Aug 2004 06:38:16 +0200

ifupdown (0.6.4-4.9) unstable; urgency=low

  * Non-maintainer upload: bug fixes and some improvements, unfortunately
    they will not make it to sarge...
   [Javier Fernandez-Sanguino]