@@ -40,6 +40,10 @@
 # This is the debhelper compatability version to use.
 export DH_COMPAT=1
 
+# For working out whether we're cross-building
+DEB_BUILD_GNU_TYPE	:= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+DEB_HOST_GNU_TYPE	:= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+
 # user/group of to-be-installed files
 ROOT_USER  := 0
 ROOT_GROUP := 0
@@ -72,7 +76,7 @@ build-stamp: configure
 test: build
 	dh_testdir
 
-	# Add here commands to test the package works.
+ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
 	chmod a+rx debian/testbuild
 	@echo running debian/testbuild
 	@if ! debian/testbuild; then \
@@ -85,6 +89,7 @@ test: build
 	     echo '=================================================='; \
 	     exit 1; \
 	fi
+endif
 
 clean:
 	dh_testdir
